conformance/tests/mesh-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh-split-v1
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - kind: Service
    name: echo-v2
    group: core
    port: 80
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Header-Set
          value: set
    backendRefs:
    - name: echo-v2
      port: 80
